--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Roatingcube</title>
     <link rel="stylesheet" href="./src/index.css" />
-    <script type="module" src="/src/my-element.js"></script>
-    <!-- <script type="module" src="/src/index.js"></script> -->
+<!-- <script type="module" src="/src/demo/House.js"></script> -->
+    <!-- <script type="module" src="/src/demo/earth.js"></script> -->
+     <script type="module" src="/src/demo/mountain.js"></script>
+
   </head>
   <body>
     <my-element>
