--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Roatingcube</title>
     <link rel="stylesheet" href="./src/index.css" />
-<!-- <script type="module" src="/src/demo/House.js"></script> -->
+<script type="module" src="/src/demo/House.js"></script>
     <!-- <script type="module" src="/src/demo/earth.js"></script> -->
-     <script type="module" src="/src/demo/mountain.js"></script>
+     <!-- <script type="module" src="/src/demo/mountain.js"></script> -->
 
   </head>
   <body>
